# BLADE-PMOzone

./: CMakeLists.txt
components/i2c_handle/: CMakeLists.txt  i2c_handle.c
components/i2c_handle/include/: i2c_handle.h
components/max31856/: CMakeLists.txt  max31856.c  test.txt
components/max31856/include/: max31856.h
components/ms5611/: CMakeLists.txt  ms5611.c
components/ms5611/include/: ms5611.h
components/sdCard/: CMakeLists.txt  sd.c
components/sdCard/include/: sd.h
components/spi_handle/: CMakeLists.txt  spi_handle.c
components/spi_handle/include/: spi_handle.h
components/sps30/: CMakeLists.txt  sps30.c
components/sps30/include/: sps30.h
components/ze27o3/: CMakeLists.txt  ze27o3.c
components/ze27o3/include/: ze27o3.h
main/: CMakeLists.txt  main.c
